--- a/translations/pl/01-the-easy-method.Rmd
+++ b/translations/pl/01-the-easy-method.Rmd
@@ -2,7 +2,7 @@
 
 Celem tej książki jest nakierowanie cię na inny sposób myślenia. W kontraście do zwykłej metody rzucania – gdzie zaczynasz myśląc o wspinaczce na Mount Everest, a potem przez kilka tygodni czujesz się wygłodniały i wybrakowany – tutaj zaczynasz od poczucia ulgi, jakbyś był wyleczony z jakiejś okropnej choroby. Od chwili, w której skończysz, im dalej idziesz w życiu, tym częściej będziesz spoglądał na ten okres twojego życia zastanawiając się po co kiedykolwiek w ogóle używałeś pornografii. Będziesz się patrzył na innych użytkowników z żalem, a nie z zazdrością.
 
-Jeśli nie jesteś kimś uzależnionym (na przykład czytasz to dla swojej sympatii), bądź skończyłeś używać i potrzebujesz wsparcia, ważnym jest żebyś nadal oglądał pornografię, aż skończysz czytać książkę. Może to się wydawać sprzecznością, a to zalecenie dalszej masturbacji wywołuje najwięcej sprzeciwu - wierz mi, że im dalej w las – tym twoja ochota na oglądanie porno będzie mniejsza. Mówię poważnie – **próby wcześniejszego rzucenia nie będą miały żadnego pozytywnego skutku**.
+Pod warunkiem, że nie jesteś osobą, która nigdy nie popadła w uzależnienie (czytasz dla swojego partnera) lub nie rzuciła nałogu (albo jest w okresie postu w ramach „diety pornograficznej”), istotne jest, aby kontynuować korzystanie, aż do całkowitego ukończenia książki. Może to się wydawać sprzecznością, a to zalecenie dalszej masturbacji wywołuje najwięcej sprzeciwu - wierz mi, że im dalej w las – tym twoja ochota na oglądanie porno będzie mniejsza. Mówię poważnie – **próby wcześniejszego rzucenia nie będą miały żadnego pozytywnego skutku**.
 
 Wiele osób nie kończy czytać, bo mają wrażenie, że pozbędą się czegoś ważnego, albo celowo czytają jedno zdanie dziennie, żeby odłożyć ten straszny moment. Spójrz na to w ten sposób – co masz do stracenia? Jeśli nie rzucisz po skończonej lekturze, to w twoim życiu nic nie będzie gorsze. To jest definicja zakładu Pascala – gra w której nie masz nic do stracenia, a możesz bardzo dużo zyskać.
 
