--- a/translations/nl/31-het-einde-van-het-boek.Rmd
+++ b/translations/nl/31-het-einde-van-het-boek.Rmd
@@ -1,168 +1,61 @@
 # Het Einde Van Het Boek
 
-Bedankt voor het lezen; zoals je weet, vervult het mij met oprechte vreugde dat je vrijheid hebt gevonden.
+Welkom aan het einde van het boek, fijn dat je hier bent.
 
-Ik droom van een wereld waarin je dat niet hoefde te doen.
+Allereerst, gefeliciteerd met het stoppen! Je zult merken dat het leven nog mooier wordt zonder porno, en dat stoppen je ogen opent voor de vele manieren waarop het leven mooi kan zijn.
 
-Een wereld waarin je het gebruik van porno begon te bevragen voordat je het vond, waarin je de effecten opmerkte die je op school had geleerd.
+Jij bent een belangrijk onderdeel van de wereld, en nu is het enige moment dat bestaat. Om veel verschillende spirituele leringen samen te vatten: je kunt jezelf veel leed bezorgen door het huidige moment niet te accepteren en te verlangen naar iets anders.
 
-Waar iemand die zijn favoriete pornoster noemde werd begroet met dat 'ongemakkelijke sociale misstap'-gevoel, maar onmiddellijk gevolgd door een oprecht verlangen om te helpen.
+Het is prima, en gezond, om doelen te hebben en naar een doel te streven, maar je zou je persoonlijke waarde niet buiten jezelf moeten zoeken, of je laten definiëren door het ingebeelde verleden of de toekomst.
 
-Een wereld waarin iedereen iets minder gespannen was; samenwerkend met lokale gemeenschappen die duurzamer, hechter en attenter zijn.
+Wees dus aanwezig en aandachtig voor het nu – dit is de enige plek die echt is.
 
-We zijn niet zo ver weg als je denkt.
+Als voorbeeld hiervan, en als oefening gedurende de ontwenningsperiode, zul je snel een ander 'moment van openbaring' (of inzicht) ervaren waarin je een 'verlangende' gedachte hebt over pornografie, en deze dan herkent als een gedachte die door porno veroorzaakt is, en vervolgens het geluk voelt dat je bevrijd bent van die gedachte die 'jij' was.
 
-## Waar Staan We Nu? {-}
+Dit kun je doen met elke gedachte die je ooit hebt, zoals negativiteit, of piekeren over het verleden of de toekomst, of momenten waarop je je geweldig voelt. Je kunt van deze gedachten nog meer genieten zonder dat je geest je overneemt met ontevredenheid.
 
-Je bevindt je in een wereld waarin porno genormaliseerd is in cultuur, media en het dagelijks leven. Wees gerust, dit zal niet blijven duren: de wetenschap is absoluut, en alles wat standhoudt met de tijd moet gebaseerd zijn op waarheid.
+Je zou bijvoorbeeld op een tropisch strand kunnen zijn, met de golven die zachtjes aanspoelen, terwijl je naar kalme muziek luistert en van de zonsondergang geniet, en toch in wanhoop verkeren door je gedachten.
 
-Je bent getuige van een sociale verschuiving ertegen; online gemeenschappen, gevierde onthoudingsmaanden en gesprekken duwen de sneeuwbal voort - maar hoelang wil je wachten?
+Zelfs nu, terwijl je dit leest, kun je je bewust worden van je lichaam dat in de ruimte rust, de geluiden om je heen, en het licht dat je omringt, en beseffen dat dit alles is. Niets van buitenaf kan iets toevoegen aan de sereniteit die je al bezit. Je wordt niet gedefinieerd door pornografie, of iets anders, tenzij je jezelf door je gedachten hierin plaatst.
 
-## Hoe dan? {-}
+Bewustzijn is het belangrijkste dat ik je kan meegeven, en easypeasy geeft je simpelweg bewustzijn over pornografie en vraagt je of je ervan geniet; zo zal puur bewustzijn zelf je de antwoorden geven op elk ander probleem waarmee je te maken hebt.
 
-Onze doelen zijn eenvoudig:
+Ik weet dat dit allemaal een beetje ‘zweverig’ klinkt, maar het is echt belangrijk, want alle problemen die ik hoor van mensen (ook met easypeasy) komen voort uit het niet herkennen van hun eigen gedachten. Kleine en grote dingen laten je stressen door ze persoonlijk te maken, of bij easypeasy, het worstelen met de eindeloze redenen die je geest zal verzinnen om pornografie te gebruiken – en veel van die redenen kunnen heel sterk zijn – in plaats van te begrijpen dat je gewoon het touw los kunt laten.
 
-1.  Tegen het einde van 2023 moet pornografie-educatie verplicht zijn in alle seksuele voorlichtingsprogramma's. Er is gewoon geen tijd te verliezen.
+Eigenlijk zijn alle problemen waarmee we te maken hebben precies dat: het niet opletten en het huidige moment accepteren. Je hoeft het misschien niet te verkiezen, maar het volledig accepteren is de enige weg vooruit.
 
-2.  Tegen het einde van 2024 moet pornografie opt-in zijn en leeftijdsbeperkt op het niveau van de dienstverlener, zodat jonge kinderen het kunnen vermijden.
+Hoe dan ook, het boek wordt herschreven om je dit inzicht te geven, aangezien easypeasy probeert je hersenspoeling tegen te gaan door je te vertellen waarom je er niet van geniet, in plaats van een gesprek te voeren en je zelf tot het inzicht te laten komen. Ik ben ermee bezig en kijk ernaar uit om in de toekomst verder te praten, en ondertussen moest ik dit (minder elegant geschreven deel) toevoegen.
 
-3.  Tegen het einde van 2025 moet Allen Carr's EasyWay prominent aanwezig zijn in nicotinecampagnes.
+Dus, over masturbatie: accepteer gewoon de schoonheid van de natuurlijke seksuele energie van je lichaam, en laat deze door je lichaam circuleren en uitbreiden.
 
-## Hoe kan ik helpen? {-}
+## Waar nu naartoe?
+Je zou je leven niet moeten veranderen omdat je gestopt bent met porno – bijvoorbeeld, je kunt je voorstellen dat iemand bewust zijn computer verstopt om zichzelf uit angst weg te houden van porno – maar je zult merken dat het loslaten van iets dat je alleen maar tegenhield, en het verkrijgen van geluk, kalmte, aandacht en vrijheid van slavernij, behoorlijk kan helpen bij het creëren van een beter leven waar je van houdt.
 
-Op dit moment ben ik bezig met het opzetten van online gemeenschappen die zichzelf kunnen coördineren.
+## Easypeasy overal delen
+Een van de dingen die gemeenschappen beter maakt, is vrijheid van verslaving; als je zou willen helpen met het verspreiden van easypeasy doe dat dan in je omgeving op de volgende manier:
+- Verstuur een persoonlijke brief naar je locale communities. Voor meer info: https://quiteasily.org/help.html
+- Print posters en verspreid ze in je omgeving. Meer info https://quiteasily.org/local.html
 
-Je kunt de volgende platforms gebruiken
 
-**[Urbit](https://urbit.org/overview) ~mogsub-possum/coomer** -- Je kunt handleidingen vinden over [het aansluiten bij het netwerk] en [het gebruiken ervan] hier.
+Je kunt ook online gesprekken creëren, en je zou even moeten stilstaan bij alle mensen die direct en indirect door porno worden beïnvloed, en nadenken over hoe je hen kunt bereiken. Vergeet ook niet dat lokale impact het meest tastbaar is, en dat het zien van echte impact het beste werkt.
 
-**[Discord](https://discord.com/invite/bCXEnf9)** -- wat momenteel gewoon een plek is voor onzinberichten waar ik geen moeite voor doe om te controleren, maar ik werk achter de schermen met mensen om er iets gaafs van te maken.
+Je kunt ook kijken op https://quiteasily.org/help voor een andere campagne gericht op gesprekken, donatielinks voor https://peacefulfoundation.org, en andere manieren waarop je kunt bijdragen aan het veranderen van de wereld.
+Het gaat er in feite om na te denken over waar de mensen die door pornografie worden getroffen zich bevinden (dus, iedereen), en hoe je hen kunt bereiken.
 
-**[Email](https://docs.google.com/forms/d/e/1FAIpQLSfi27XGmChe_qtu4fP6E6lNyjY8Ia_93TlfGbjbKgiI1VNdkg/viewform)** -- waar je je kunt aanmelden om zeer af en toe e-mails van mij te ontvangen.
+## Fantasie!
 
-Dus als je iedereen bent, van overal, met elke vaardigheid of hoeveelheid vrije tijd, zul je in staat zijn om anderen te helpen bevrijden.
+Pornografie is het elimineren van fantasie, waarbij je mechanisch wordt geleid naar een orgasme via geconditioneerde fetisjen, die toenemen naarmate je ongevoelig wordt. Stoppen zal veel vragen oproepen over je seksualiteit, maar je moet begrijpen dat deze geconditioneerde fetisjen niet jouw ware ik zijn en dat ook nooit kunnen zijn. Een "gooner" die hardcore ruige porno kijkt en een toevallige gebruiker die softcore statische afbeeldingen bekijkt, zijn meer vergelijkbaar dan verschillend. Rust nu uit, ontwikkel zuiverheid en liefde, en deze vragen zullen zich na verloop van tijd vanzelf oplossen.
+Voor verdere ondersteuning kun je kijken op https://semenretention.org.
 
-Het is nog niet klaar omdat alles perfect gestructureerd moet zijn, maar je kunt je nu al bij de verschillende kanalen aansluiten en chatten.
+Het elimineren van fantasie heeft veel maatschappelijke gevolgen. Je kunt niet dromen van een betere toekomst; je zit vast in fantasieën die binnen het huidige systeem leven. Je wordt dromen verkocht in plaats van ze zelf te dromen, en je kijkt naar projecties van de dromen van anderen om je eigen onverschilligheid te rationaliseren.
 
-## Wat dacht je van jou? {-}
+- [deleteinstaplease](https://instagram.com/deleteinstaplease)
+- [peacefulfraser on toktok](https://tiktok.com/@peacefulfraser)
+- [Fraser Patterson](https://youtube.com/@fraserpattersonau) on deleteyoutubeplease x
 
-Mijn naam is Fraser, en ik ben een 23-jarige psychologiestudent uit Australië.
+or as ~racnec-palren/hello on [urbit](https://urbit.org)
 
-Ik vind het echt leuk om mensen te helpen, en ik denk dat hoe meer mensen vrij zijn van porno, hoe beter!
-
-Ik ontmoet je liever persoonlijk, maar hier is waar ik online te vinden ben.
-
-**yt:** [Fraser Patterson](https://www.youtube.com/channel/UChMZhvS7eV-WoLDu_mRjEEw) -- Ik plaats rustige video's over mijn leven en kleine wijsheden.
-
-**ig:** [@deleteinstaplease](https://instagram.com/deleteinstaplease) -- Af en toe plaats ik foto's van de natuur of van wat ik aan het doen ben.
-
-**tw:** [@deletetwitpls](https://twitter.com/deletetwitpls) -- Hier plaats ik niets.
-
-*Voel je alsjeblieft niet onder druk gezet om me te volgen.*, Maar weet je, een klein beetje druk omdat het me meer 'invloed' geeft, zodat ik tegen podcasts en dergelijke kan zeggen: "Hey maat, vind je het erg als ik langskom?"
-
-## Wijsheden {-}
-
-Het stoppen met porno is het makkelijke deel; het 'moeilijke' deel is de reis die voor je ligt.
-
-Hier zijn een paar dingen die je misschien kunnen helpen op die reis.
-
-Als je het gevoel hebt dat je **verslaafd bent aan technologie**, begrijp dan dat je gedachten zich aanpassen aan het tempo van het leven. Vertraag je leven door de natuur te ervaren, en vast 24 uur in een donkere kamer.
-
-Dit is geen 'wondermiddel', maar het geeft je tijd om na te denken en vrede te vinden met je gedachten.
-
-Over vrede gesproken, **mindfulness-meditatie** werd eerder aanbevolen.
-
-Meditatie is de praktijk van het begrijpen hoe je geest altijd is. Gedachten komen voortdurend op en verdwijnen weer.
-
-Je zult aan porno denken - natuurlijk - en mediteren helpt om ze te herkennen als alleen dat: gedachten.
-
-Ik zou het ten zeerste aanbevelen om een [gratis maand van Waking Up](
-Ik word niet betaald voor het aanbevelen hiervan, het is gewoon echt een geweldige app. Ik zou ten zeerste de introductiecursus aanbevelen, gevolgd door wat Alan Watts en Wisdom Texts van Jayasara. Allemaal zeer mooie ervaringen.
-
-Natuurlijk zou **ademwerk** ook nog steeds helpen.
-
-Ik zou Bukeuko- en Wim Hof-ademhalingstechnieken aanbevelen.
-
-Voor nu, leg één hand op je buik en één op je borst.
-
-Vervolgens, adem in terwijl je je lippen in een O-vorm uitsteekt (ja, echt waar.. haha xD!!)
-
-Je zult je middenrif voelen activeren, wat hoe je natuurlijk ademde als baby. Het is op alle mogelijke manieren beter voor je en vereist minder inspanning van je lichaam.
-
-Je hebt oppervlakkig ademen opgepikt omdat iedereen anders het doet, en we natuurlijk mensen spiegelen.
-
-Klinkt bekend?
-
-Nou, over verslavingen gesproken, er is geen twijfel dat je ervan zou genieten om te stoppen...
-
-**Alcohol!**
-
-Naast het creëren van een 10-daagse onthouding, slaagt alcohol erin om drinkers 'stom' te maken en geeft het je geen genot, zelfvertrouwen, moed of ontspanning.
-
-Jason Vale's boek *Kick the Drink... Easily!" ontrafelt alcohol volledig en compleet. Hij betoogt dat er niet zoiets bestaat als een alcoholist - mensen die 'de controle verliezen' (over een verslavend vacuüm) worden alleen bekritiseerd en gemeden - en dat stoppen extreem makkelijk is.
-
-Ik ben gestopt met alcohol na PMO, en ik heb het leven en sociale gelegenheden echt veel leuker gevonden zonder het.
-
-Een drug om jezelf te verdoven en te vergiftigen is erg 'boomer', vind je niet?
-
-Maar misschien zijn we allemaal gewoon slachtoffers van...
-
-**Consumpie.**
-
-Dus, hier is een citaat erover.
-
->
->
-...
-
->* Ik geniet niet vaak van overmatige analyse, maar de aard van hedendaags entertainment smeekt om zo'n proces om het voor de rechtbank te brengen. Want dat is wat de meeste mensen vergeten wanneer ze tv kijken of door hun telefoon scrollen, het is een daad, ze voeren een handeling uit, hoe gewoon en verdovend het ook mag zijn. Elke handeling die vaak wordt uitgevoerd, wordt uiteindelijk een gewoonte, op zijn minst in zekere zin, of je het nu leuk vindt of niet. En aan de basis van de handeling die je uitvoert wanneer men verzonken is in hedendaags entertainment, ligt onverschilligheid. Dat klopt, de mens heeft een manier gevonden om niet alleen actief onverschillig te zijn, maar heeft ook een manier gevonden om dit gedrag zo te ontwikkelen dat het een eigenschap is geworden - "Man, ik heb het hele weekend Netflix gekeken!" Laten we dit uit elkaar halen, laten we eens kijken hoe de mens besluit zijn gegeven leven door te brengen-*
->
->* Er zit een man of vrouw, neergeploft op een bank. Hun lichaam in een vreemde, onnatuurlijke houding, helemaal opgevouwen en rond, zonder dat een punt meer gewicht draagt dan een ander, ze zijn een grote hoop slijm. Ze blijven hier gewoon zitten, in dezelfde ruimte van 4 bij 4 voet, urenlang - de wereld is trouwens veel groter dan dit - ze zullen hun arm bewegen, misschien zichzelf herpositioneren, maar dat is het wel zo'n beetje wat betreft het gebruik van hun lichaam. Wat hun geest betreft, werkt die letterlijk op het laagste niveau. In tegenstelling tot lezen, leren, mediteren, oefenen of concentreren, vereisen hedendaagse vormen van entertainment niets van de kijker, behalve één ding, dat ze in een bepaalde richting staren. Ze zijn middelen van onverschilligheid. Men zou, als ze dat wensten, overal verdoofd kunnen zijn, behalve hun ogen, en ze zouden nog steeds de daad van 'vermaakt worden' uitvoeren, zo zielig is deze daad. Ik heb niets tegen wat er op de tv is, en ook niet iets tegen visuele media, waar ik op tegen ben is media die een middel zijn tot een doel. Mensen houden niet langer van tv-programma's of specifieke films, ze houden van Netflix, of van tv-kijken als geheel. Hun favoriete tijdsbestedingen zijn onverschilligheid tegenover alles wat ze kunnen zijn. Het is opnieuw de vraag of je dit ooit in de eerste plaats hebt gewild, of heeft iemand anders besloten dat dit de normale wens is om te hebben?*
-
---- Meta Nomad, [Exiting Modernity](https://jdemeta.net/2019/09/15/exiting-modernity/) // ([pdf](https://jdemeta.net/wp-content/uploads/2019/09/Exiting-Modernity.pdf))
-
-Minder tijd voor schermen doorbrengen (samen met wat oogtraining) verbetert ook...
-
-** Bijziendheid.**
-
-De meeste gevallen van bijziendheid (niet goed ver kunnen zien op afstand) zijn perfect geneesbaar.
-
-Kort gezegd, te veel dichtbij kijken verzwakt een oogspier. Het dragen van een bril verzwakt deze nog meer, en nu heb je sterkere brillenglazen nodig. Je kunt deze spier opnieuw trainen.
-
-Bekijk eens,
-
-- [EndMyopia](https://endmyopia.org)
-- [Myopia is Mental](https://www.myopiaismental.com/)
-- [Visions of Joy](https://visionsofjoy.org)
-
-Je hoeft ook geen geld uit te geven om te genezen...
-
-**Kaalheid.**
-
-Je kunt veel gevallen genezen door eenvoudige hoofdmassages toe te passen.
-
-Nou ja, volgens een vriend van mij die vaak dingen vindt die "klinken als onzin maar eigenlijk waar zijn".
-
-Hij raadt https://perfecthairhealth.com aan, en ook...
-
-**Ontgifting van kwik.**
-
-Wat hij zei dat voor hem werkte.
-
-Kort gezegd, je krijgt kwik binnen via de omgeving (soms), amalgaamvullingen en zelfs in de baarmoeder, en het is een erg zwaar (en giftig) metaal waar je lichaam niet vanaf kan komen.
-
-Je kunt echter een 'chelatie' proces ondergaan zoals beschreven in "The Mercury Detoxification Handbook" om ervan af te komen.
-
-Hij zegt dat niet iedereen erdoor wordt beïnvloed, maar het is gewoon goed om er rekening mee te houden: vooral als je vreemde gezondheidsproblemen hebt.
-
-Hoe dan ook, over **intieme relaties** zou ik drie boeken aanbevelen:
-
-- *Models: Attract Women Through Honesty* van Mark Manson voor het begrijpen van emotionele kwetsbaarheid en het verminderen van behoeftigheid.
-- *The Rational Male* van Rollo Tomassi, wat handig is om giftige relaties te vermijden.
-- *The Way of The Superior Man* van David Dieda, geeft een meer spiritueel begrip van mannelijke, vrouwelijke en gebalanceerde energieën. Het is vrij 'new-agey', maar het klopt.
-
-en ook, om je oprecht vrede te sturen. Je hebt jezelf zojuist bevrijd van een vreselijke ziekte. Bekijk de wereld met frisse ogen en vernieuwde betekenis, en geniet altijd van de reis.
-
+Ik zal ze allemaal lezen.
 Welkom bij de rest van je leven.
 Hartelijke groeten,
 [Fraser Patterson](https://fraserpatterson.au)
